--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -158,6 +158,10 @@ footer {
     footer {
         z-index: 10;
     }
+
+    .split-screen img {
+        max-width: 100%;
+    }
 }
 
 /* desktop */
